--- a/src/components/testtwo/testtwo.scss
+++ b/src/components/testtwo/testtwo.scss
@@ -85,6 +85,7 @@
             padding: 150px 0;
             padding-left: 150px;
             position: absolute;
+            overflow-y: hidden;
 
 
             @include mobile{
